fixed a break in receivemessage

--- a/public/combo.css
+++ b/public/combo.css
@@ -31,7 +31,6 @@ html, body {
 section {
 	background-color: #f9f9f9;
 	color: black;
-	border-bottom: 1px solid #E4E6EA;
 	/*box-shadow: 0 10px 16px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19) !important;*/
 }
 
